<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A2E8E3E3"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#040632"
            android:orientation="horizontal"

            android:padding="8dp">


            <ImageView
                android:id="@+id/img_detail_profile"
                android:layout_width="362dp"
                android:layout_height="169dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/nemo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="381dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.203"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail_profile" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/director"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name" />

            <TextView
                android:id="@+id/detail_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/director"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/movie_name" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/runtime"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/detail_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.444" />

            <TextView
                android:id="@+id/detail_runtime"
                android:layout_width="63dp"
                android:layout_height="15dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/detail_genre"
                android:layout_width="211dp"
                android:layout_height="25dp"
                android:layout_marginTop="36dp"
                android:text="@string/genre"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="12dp"
                android:text="@string/rating"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/detail_director"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/detail_director"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toEndOf="@+id/detail_rating"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_star_rate" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="173dp"
                android:layout_height="27dp"
                android:layout_marginBottom="20dp"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_genre"
                app:layout_constraintVertical_bias="0.042" />

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="316dp"
                android:layout_height="208dp"
                android:layout_marginStart="10dp"
                android:text="@string/detail_description"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.225"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_genre"
                app:layout_constraintVertical_bias="0.48" />

            <Button
                android:id="@+id/btn_watch"
                android:layout_width="318dp"
                android:layout_height="47dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/orange"
                android:text="@string/watch"
                android:textColor="@color/white"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.376"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
</ScrollView>
